# denoise-voice-clarity

./: .gitignore  .gitlab-ci.yml  CNAME  DESIGN.md  LAUNCH.md  README.md  SUBMISSIONS.md  index.html
.github/workflows/: pages.yml  release.yml
android/: .gitignore  build.gradle.kts  consumer-rules.pro  settings.gradle.kts
android/src/main/java/com/gruner/voiceclarity/: NativeCore.kt  VoiceClarityAudioProcessor.kt
android/src/test/java/com/gruner/voiceclarity/: VoiceClarityAudioProcessorTest.kt
assets/: denoise_voice_core_bg-B5HuRx5v.wasm  index-B4dHiubw.js  index-gZ-F0DYR.js  index-qiMlyDwC.js  voiceClarity.worklet-B6m3Ojpp.js  voiceClarity.worklet-k6QF0XVm.js
docs/superpowers/plans/: 2026-06-12-mobile-adapters.md
docs/superpowers/specs/: 2026-06-12-voice-clarity-mobile-adapters-design.md
ios/: .gitignore  Package.resolved  Package.swift
ios/Sources/DenoiseVoiceCoreFFI/include/: denoise_voice_core.h  module.modulemap
ios/Sources/VoiceClarity/: VoiceClarityProcessor.swift
ios/Tests/VoiceClarityTests/: VoiceClarityProcessorTests.swift
rust-core/: Cargo.toml  cbindgen.toml
rust-core/src/: bands.rs  clarity.rs  engine.rs  ffi.rs  jni.rs  lib.rs  vad.rs  wasm.rs
scripts/: build-android.sh  build-ios.sh  build-wasm.sh  gen-header.sh
web/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
web/demo/: README.md  index.html  main.ts  package.json  vite.config.ts
web/examples/: meeting-ui-integration.ts
web/scripts/: build.mjs  copy-wasm.mjs
web/src/: VoiceClarityProcessor.ts  engine.ts  index.ts  loader.ts  standalone.ts
web/src/__tests__/: engine.options.test.ts
web/src/worklet/: voiceClarity.worklet.ts
